--- a/.github/workflows/TWRP Recovery builder.yml
+++ b/.github/workflows/TWRP Recovery builder.yml
@@ -13,10 +13,10 @@ on:
   workflow_dispatch:
 
 env:
-  MANIFEST: https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-10.0
-  DEVICE: CD6
-  DT_LINK: https://github.com/PitchBlackRecoveryProject/android_device_TECNO_CD6-pbrp
-  DT_PATH: device/TECNO/CD6
+  MANIFEST: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni -b twrp-10.0-deprecated
+  DEVICE: X655C
+  DT_LINK: https://github.com/Parvej0099/recovery_device_infinix_x655c_h6211abkg-q-op
+  DT_PATH: device/infinix/X655C
   TARGET: recoveryimage
   TZ: Asia/manila
 
@@ -52,15 +52,18 @@ jobs:
              repo sync -c -j4 --force-sync --no-clone-bundle --no-tags
              git clone --depth=1 $DT_LINK $DT_PATH
              
-       - name: Build
+          - name: Build
          run: |
               cd work
               . build/envsetup.sh &&lunch omni_$DEVICE-eng &&export ALLOW_MISSING_DEPENDENCIES=true && mka $TARGET
              
-       - name: Upload Articact
-         uses: actions/upload-artifact@v2
+       - name: Release recovery image
+         uses: softprops/action-gh-release@v1
+         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          with:
-         path: |
-          workspace/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/*.img
-          workspace/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/*.zip
-         name: ${{ github.event.inputs.DEVICE_NAME }}
+          tag_name: TWRP_10.0
+          name: TWRP-X655C
+          files: | 
+            work/out/target/product/X655C/recovery.img
+            work/out/target/product/KD7/recovery.img
