--- a/.github/workflows/orangefox recovery.yml
+++ b/.github/workflows/orangefox recovery.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 env:
-  MANIFEST: https://gitlab.com/OrangeFox/Manifest.git -b fox_10.0
+  MANIFEST: rsync rsync://sources.orangefox.download/sources/fox_10.0 . --progress -a
   DEVICE: X655C
   DT_LINK: https://github.com/kies83/recovery_device_infinix_x655c_h6211abkg-q-op
   DT_PATH: device/infinix/X655C
@@ -47,7 +47,7 @@ jobs:
          run: |
              mkdir work
              cd work
-             repo init -u $MANIFEST --depth=1
+             $MANIFEST --depth=1
              repo sync -c -j8 --force-sync --no-clone-bundle --no-tags
              repo sync -c -j8 --force-sync --no-clone-bundle --no-tags
              git clone --depth=1 $DT_LINK $DT_PATH
