--- a/.github/workflows/ofox.yml
+++ b/.github/workflows/ofox.yml
@@ -19,6 +19,7 @@ env:
   Rec_ver: "10.0"
   Rec_url: https://gitlab.com/OrangeFox/sync.git -b master
   device: X655C
+  bot: X655C
   DT_url: https://github.com/kies83/recovery_device_infinix_x655c_h6211abkg-q-op
   DT_path: device/infinix/X655C
   ProductFileHeader: omni
