--- a/.github/workflows/TWRP Recovery builder.yml
+++ b/.github/workflows/TWRP Recovery builder.yml
@@ -13,10 +13,10 @@ on:
   workflow_dispatch:
 
 env:
-  MANIFEST: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp.git -b twrp-11
-  DEVICE: X655C
-  DT_LINK: https://github.com/kies83/twrp_infinix_X655C
-  DT_PATH: device/infinix/X655C
+  MANIFEST: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
+  DEVICE: a03
+  DT_LINK: https://github.com/twrpdtgen/android_device_samsung_a03/tree/a03nnxx-user-11-RP1A.200720.012-A035FXXU3CWD2-release-keys
+  DT_PATH: device/samsung/a03
   TARGET: recoveryimage
   TZ: Asia/Karachi
 
@@ -63,6 +63,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          with:
           tag_name: TWRP_10.0
-          name: TWRP-X655C
+          name: TWRP-a03
           files: | 
             work/out/target/product/X655C/recovery.img
